Migrate to BannerMessagePreference and BannerMessagePreferenceGroup for all banners on the Home page.
Screenshots just for illustration, they would show only when required.

Legacy: https://drive.google.com/file/d/11XlKmIYYG0sNLanHkHGSdEPachXi5-Wn/view?usp=drive_link&resourcekey=0-a1u3gtStZoaJYDce-IlVEA
Legacy on U: https://drive.google.com/file/d/1nH5gpaio8h0f8bSwt1XI2wh3V_tp0N0w/view?usp=drive_link&resourcekey=0-2clkgOmqb86T7ahzW6ystw
Expressive: https://drive.google.com/file/d/1GPc7g_cM0ImkFUk0FXBwdbxVg7A7KJ8v/view?usp=drive_link&resourcekey=0-vNHJwfj1Y2XleOiaJRcHHA

Bug: 380050244
Test: atest
Flag: NONE wip
Change-Id: Ic24986ca700a09c14e0f687b9d8131f9e197d60e

--- a/apk/res/xml/home_preference_screen.xml
+++ b/apk/res/xml/home_preference_screen.xml
@@ -15,12 +15,19 @@
 -->
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <com.android.settingslib.widget.BannerMessagePreferenceGroup
+        android:key="banner_group"
+        app:expandTitle="@string/banner_group_more_items"
+        app:collapseTitle="@string/banner_group_fewer_items"
+        app:collapseIcon="?attr/collapseIcon"
+        android:order="0"/>
     <com.android.settingslib.widget.ZeroStatePreference
         android:key="no_recent_access"
         android:title="@string/recent_access_empty_state_title"
         android:icon="?attr/accessHistoryIcon"
         android:summary="@string/recent_access_empty_state_description"
-        app:isPreferenceVisible="false"/>
+        app:isPreferenceVisible="false"
+        android:order="1"/>
     <PreferenceCategory
         android:key="recent_access"
         android:title="@string/recent_access_header"
