--- a/apk/res/values/attrs.xml
+++ b/apk/res/values/attrs.xml
@@ -24,6 +24,7 @@
     <attr name="recentAccessTimelineDividerDrawable" format="reference" />
     <attr name="manageDataIcon" format="reference"/>
     <attr name="optionsIcon" format="reference"/>
+    <attr name="collapseIcon" format="reference"/>
 
     <!-- App permissions page -->
     <attr name="removeAccessForAllAppsIcon" format="reference"/>
