Added premissions request menu.
Moved permissions requesting to the permissions menu and created said
menu. screenshot/8Rbau5G4BHVpTjz

Test: manual
Flag: TEST_ONLY
Bug: 394070828
Change-Id: Id92bb1cfba94734095490e5e1672b50a72f61307

--- a/testapps/toolbox/res/layout/fragment_home.xml
+++ b/testapps/toolbox/res/layout/fragment_home.xml
@@ -44,13 +44,13 @@
             android:text="@string/launch_health_connect" />
 
         <Button
-            android:id="@+id/request_data_type_permissions_button"
+            android:id="@+id/permissions_request_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="8dp"
+            android:layout_margin="8dp"
             android:minWidth="250dp"
-            android:text="@string/request_data_type_permissions" />
+            android:text="@string/permissions_request"/>
 
         <Button
             android:id="@+id/request_route_button"
@@ -124,86 +124,6 @@
             android:minWidth="250dp"
             android:text="@string/toggle_permission_intent_filter" />
 
-        <Button
-            android:id="@+id/request_health_permissions"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="8dp"
-            android:minWidth="250dp"
-            android:text="@string/request_health_permissions" />
-
-        <Button
-            android:id="@+id/request_additional_permissions"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="8dp"
-            android:minWidth="250dp"
-            android:text="@string/request_additional_permissions" />
-
-        <Button
-            android:id="@+id/request_bg_read_permission"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="8dp"
-            android:minWidth="250dp"
-            android:text="@string/request_bg_read_permission" />
-
-        <Button
-            android:id="@+id/request_history_read_permission"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="8dp"
-            android:minWidth="250dp"
-            android:text="@string/request_history_read_permission" />
-
-        <Button
-            android:id="@+id/request_medical_write_permission"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="8dp"
-            android:minWidth="250dp"
-            android:text="@string/request_medical_write" />
-
-        <Button
-            android:id="@+id/request_medical_write_and_other_health_permissions"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="8dp"
-            android:minWidth="250dp"
-            android:text="@string/request_medical_write_and_other_health_permissions" />
-
-        <Button
-            android:id="@+id/request_medical_read"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="8dp"
-            android:minWidth="250dp"
-            android:text="@string/request_medical_read" />
-
-        <Button
-            android:id="@+id/request_fitness_read"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="8dp"
-            android:minWidth="250dp"
-            android:text="@string/request_fitness_read" />
-
-        <Button
-            android:id="@+id/request_fitness_write"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="8dp"
-            android:minWidth="250dp"
-            android:text="@string/request_fitness_write" />
 
         <Button
             android:id="@+id/read_data_in_background_button"
