--- a/testapps/toolbox/res/values-v35/themes.xml
+++ b/testapps/toolbox/res/values-v35/themes.xml
@@ -16,6 +16,6 @@
 
 <resources>
     <style name="AppTheme" parent="Theme.MaterialComponents.DayNight">
-        <item name="android:windowOptOutEdgeToEdgeEnforcement">true</item>
+        <item name="android:fitsSystemWindows">true</item>
     </style>
 </resources>
