Clean up deprecated classes
Bug: 368600140
Flag:  EXEMPT refactor
Test: atest
Change-Id: Id16b5b6f489dc77bfedd0d8da457318845db777a

--- a/apk/res/navigation/data_nav_graph.xml
+++ b/apk/res/navigation/data_nav_graph.xml
@@ -18,102 +18,8 @@
 
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/permissions_nav_graph"
-    app:startDestination="@id/healthDataCategoriesFragment">
+    android:id="@+id/permissions_nav_graph">
 
-    <include app:graph="@navigation/fitness_app_nav_graph"/>
-    <include app:graph="@navigation/medical_app_nav_graph"/>
-    <include app:graph="@navigation/combined_permissions_nav_graph"/>
-    <include app:graph="@navigation/connected_apps_nav_graph"/>
-    <include app:graph="@navigation/data_sources_nav_graph"/>
-
-    <fragment
-        android:id="@+id/healthDataCategoriesFragment"
-        android:name="com.android.healthconnect.controller.categories.HealthDataCategoriesFragment"
-        android:label="@string/data_title">
-        <action
-            android:id="@+id/action_healthDataCategories_to_healthDataAllCategories"
-            app:destination="@id/healthDataAllCategoriesFragment" />
-        <action
-            android:id="@+id/action_healthDataCategories_to_autoDelete"
-            app:destination="@id/autoDeleteFragment" />
-        <action
-            android:id="@+id/action_healthDataCategories_to_healthPermissionTypes"
-            app:destination="@id/healthPermissionTypesFragment" />
-        <action
-            android:id="@+id/action_dataCategoriesFragment_to_unitsFragment"
-            app:destination="@id/unitFragment" />
-        <action
-            android:id="@+id/action_healthDataCategories_to_connectedApps"
-            app:destination="@id/connected_apps_nav_graph"/>
-    </fragment>
-
-    <fragment
-        android:id="@+id/autoDeleteFragment"
-        android:name="com.android.healthconnect.controller.autodelete.AutoDeleteFragment"
-        android:label="@string/auto_delete_title"/>
-    <fragment
-        android:id="@+id/healthDataAllCategoriesFragment"
-        android:name="com.android.healthconnect.controller.categories.HealthDataAllCategoriesFragment"
-        android:label="@string/data_title">
-        <action
-            android:id="@+id/action_healthDataAllCategories_to_healthPermissionTypes"
-            app:destination="@id/healthPermissionTypesFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/dataEntriesFragment"
-        android:name="com.android.healthconnect.controller.dataentries.DataEntriesFragment">
-        <action
-            android:id="@+id/action_dataEntriesFragment_to_dataEntryDetailsFragment"
-            app:destination="@id/dataEntryDetailsFragment" />
-        <action
-            android:id="@+id/action_dataEntriesFragment_to_unitsFragment"
-            app:destination="@+id/unitFragment" />
-        <action
-            android:id="@+id/action_dataEntriesFragment_to_connectedApps"
-            app:destination="@id/connected_apps_nav_graph"/>
-    </fragment>
-
-    <fragment
-        android:id="@+id/healthPermissionTypesFragment"
-        android:name="com.android.healthconnect.controller.permissiontypes.HealthPermissionTypesFragment"
-        android:label="@string/permission_types_title">
-        <action
-            android:id="@+id/action_healthPermissionTypes_to_healthDataAccess"
-            app:destination="@id/healthDataAccessFragment" />
-        <action
-            android:id="@+id/action_healthPermissionTypes_to_unitsFragment"
-            app:destination="@+id/unitFragment" />
-        <action
-            android:id="@+id/action_healthPermissionTypes_to_dataSourcesAndPriority"
-            app:destination="@+id/data_sources_nav_graph"/>
-        <action
-            android:id="@+id/action_healthPermissionTypes_to_connectedApps"
-            app:destination="@id/connected_apps_nav_graph"/>
-    </fragment>
-
-    <fragment
-        android:id="@+id/healthDataAccessFragment"
-        android:name="com.android.healthconnect.controller.dataaccess.HealthDataAccessFragment">
-        <action
-            android:id="@+id/action_healthDataAccess_to_dataEntries"
-            app:destination="@id/dataEntriesFragment" />
-        <action
-            android:id="@+id/action_healthDataAccessFragment_to_fitnessApp"
-            app:destination="@id/fitness_app_nav_graph" />
-        <action
-            android:id="@+id/action_healthDataAccessFragment_to_medicalApp"
-            app:destination="@id/medical_app_nav_graph" />
-        <action
-            android:id="@+id/action_healthDataAccessFragment_to_combinedPermissions"
-            app:destination="@id/combined_permissions_nav_graph" />
-        <action
-            android:id="@+id/action_healthDataAccessFragment_to_unitsFragment"
-            app:destination="@+id/unitFragment" />
-        <action
-            android:id="@+id/action_healthDataAccessFragment_to_connectedApps"
-            app:destination="@id/connected_apps_nav_graph"/>
-    </fragment>
 
     <fragment
         android:id="@+id/unitFragment"
