Add support for compose in toolbox app
- introduce a new home screen for toolbox app

Bug: 395934080
Flag: NONE testing app support
Test: m HealthConnectToolbox
Change-Id: I0e5e9e001a58b4e70925bcc82ab769e5e12a41d0

--- a/testapps/toolbox/res/values/donottranslate_strings.xml
+++ b/testapps/toolbox/res/values/donottranslate_strings.xml
@@ -33,6 +33,7 @@
   <string name="read_data_in_foreground">Read Data in Foreground</string>
   <string name="phr_options">PHR options</string>
   <string name="exit_process">Exit Process</string>
+  <string name="new_screens">New screens</string>
   <string name="all_permissions_already_granted_toast">Permissions already granted, please manage them via HC App</string>
   <string name="all_permissions_success">All permissions were successfully granted</string>
   <string name="number_of_permissions_not_granted">%1$d permissions were not granted</string>
