--- a/testapps/toolbox/res/layout/fragment_home.xml
+++ b/testapps/toolbox/res/layout/fragment_home.xml
@@ -161,6 +161,16 @@
             android:minWidth="250dp"
             android:text="@string/exit_process" />
 
+
+        <Button
+            android:id="@+id/new_screens_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="8dp"
+            android:minWidth="250dp"
+            android:text="@string/new_screens" />
+
     </LinearLayout>
 
 </ScrollView>
