--- a/testapps/toolbox/res/values/donottranslate_strings.xml
+++ b/testapps/toolbox/res/values/donottranslate_strings.xml
@@ -150,8 +150,8 @@
   <string name="phr_options_ingest_title">Insert PHR data</string>
   <string name="phr_options_create_data_source">Create data source</string>
   <string name="phr_options_data_source_id_placeholder">Create data source to see the id</string>
-  <string name="phr_options_insert_immunization">Insert all vaccines</string>
-  <string name="phr_options_insert_allergy">Insert all allergies</string>
+  <string name="phr_options_pasted_resource_placeholder">Add a FHIR resource json string</string>
+  <string name="phr_options_insert_resource">Insert pasted resource</string>
   <string name="phr_options_read_by_id">Read all vaccines</string>
   <string name="phr_options_seed_fhir_jsons">Seed all FHIR resources</string>
   <string name="phr_options_request_immunization">Request read immunization permission</string>
