Replace all usages of BannerPreference with HealthBannerPreference.
Screenshots:
App permissions banner expressive: https://hsv.googleplex.com/5262279816773632
App permissions banner legacy: https://hsv.googleplex.com/5328749292683264

B&R expressive: https://hsv.googleplex.com/5359803760115712
B&R legacy: https://hsv.googleplex.com/6454649199525888

Test: atest
Fix: 380050244
Bug: 395830000
Flag: NONE handled by settings
Change-Id: I19d9b48dcc78a3ce21d1e84faec3c2953eb5a4ca

--- a/apk/res/xml/backup_and_restore_settings_screen.xml
+++ b/apk/res/xml/backup_and_restore_settings_screen.xml
@@ -13,7 +13,14 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <com.android.settingslib.widget.BannerMessagePreferenceGroup
+        android:key="banner_group"
+        app:expandTitle="@string/banner_group_more_items"
+        app:collapseTitle="@string/banner_group_fewer_items"
+        app:collapseIcon="?attr/collapseIcon"
+        android:order="0"/>
     <PreferenceCategory
         android:key="settings_category"
         android:order="1">
