--- a/apk/res/values-v35/themes.xml
+++ b/apk/res/values-v35/themes.xml
@@ -17,4 +17,11 @@
     <style name="Theme.HealthConnect" parent="Base.Theme.HealthConnect">
         <!-- TODO (b/376085798) Expressive styles -->
     </style>
+
+    <style name="Theme.HealthConnect.Expressive" parent="Theme.SubSettingsBase.Expressive">
+        <!-- REGION CLIPPING -->
+        <item name="android:clipToPadding">true</item>
+        <item name="android:clipChildren">true</item>
+        <!-- END REGION -->
+    </style>
 </resources>
