--- a/testapps/toolbox/res/layout/fragment_phr_options.xml
+++ b/testapps/toolbox/res/layout/fragment_phr_options.xml
@@ -15,6 +15,7 @@
   -->
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -134,6 +135,44 @@
             android:gravity="left"
             android:hint="@string/phr_options_pasted_resource_placeholder"
             android:textSize="12sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginTop="38dp"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:text="@string/phr_options_bulk_ingest_title" />
+
+        <EditText
+            android:id="@+id/phr_number_of_inserts_id_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="40dp"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:inputType="numberSigned"
+            android:text="10000"
+            android:textSize="16sp" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="@android:style/Widget.ProgressBar.Horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="300dp"
+            android:layout_marginTop="8dp"
+            android:visibility="gone"
+            android:progress="0"/>
+
+        <Button
+            android:id="@+id/phr_seed_x_fhir_jsons_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
+            android:minWidth="250dp"
+            android:text="@string/phr_options_seed_x_fhir_jsons" />
 
     </LinearLayout>
 </ScrollView>
