--- a/testapps/toolbox/res/values/donottranslate_strings.xml
+++ b/testapps/toolbox/res/values/donottranslate_strings.xml
@@ -150,11 +150,13 @@
   <string name="phr_options_read_immunization">Read PHR data</string>
   <string name="phr_options_select_patient_title">Select patient context</string>
   <string name="phr_options_ingest_title">Insert PHR data</string>
+  <string name="phr_options_bulk_ingest_title">Bulk insert PHR data</string>
   <string name="phr_options_create_data_source">Create data source</string>
   <string name="phr_options_pasted_resource_placeholder">Add a FHIR resource json string</string>
   <string name="phr_options_insert_resource">Insert pasted resource</string>
   <string name="phr_options_read_by_id">Read all vaccines</string>
   <string name="phr_options_seed_fhir_jsons">Seed all FHIR resources</string>
+  <string name="phr_options_seed_x_fhir_jsons">Seed selected number of FHIR resources</string>
   <string name="phr_options_request_immunization">Request read immunization permission</string>
   <string name="phr_options_request_medical">Request all medical permissions</string>
   <string name="all_medical_permissions_success">All medical permissions were successfully granted</string>
