Display ZeroStatePrefence in Data Sources screen
https://hsv.googleplex.com/6274019786489856

Bug: 377663416
Test: atest
Flag: NONE handled by expressive theming
Change-Id: Iabffdf4733bcb63d6071b1d9fb9a2325f40d9772

--- a/apk/res/values/attrs.xml
+++ b/apk/res/values/attrs.xml
@@ -85,6 +85,7 @@
     <attr name="addIcon" format="reference"/>
     <attr name="editIcon" format="reference"/>
     <attr name="closeIcon" format="reference"/>
+    <attr name="appsIcon" format="reference"/>
 
     <!-- Backup and restore -->
     <attr name="uploadIcon" format="reference"/>
