--- a/apk/res/values/themes.xml
+++ b/apk/res/values/themes.xml
@@ -84,6 +84,8 @@
         <item name="addIcon">@drawable/ic_add</item>
         <item name="editIcon">@drawable/ic_edit</item>
         <item name="closeIcon">@drawable/ic_close</item>
+        <item name="appsIcon">@drawable/ic_apps</item>
+
 
         <!-- Backup and restore -->
 
