--- a/apk/res/values-v35/themes.xml
+++ b/apk/res/values-v35/themes.xml
@@ -14,9 +14,7 @@
   limitations under the License.
 -->
 <resources>
-    <style name="Theme.HealthConnect" parent="Base.Theme.HealthConnect">
-        <!-- TODO (b/376085798) Expressive styles -->
-    </style>
+    <style name="Theme.HealthConnect" parent="Base.Theme.HealthConnect"/>
 
     <style name="Theme.HealthConnect.Expressive" parent="Theme.SubSettingsBase.Expressive">
         <!-- REGION CLIPPING -->
