Add ZeroStatePreference to AllDataFragment
https://hsv.googleplex.com/5749267795804160

Bug: 377663416
Test: atest
Flag: NONE handled by expressive theming
Change-Id: I25d9374da257e6eca97ebef21b887ba6dd999d15

--- a/apk/res/values/attrs.xml
+++ b/apk/res/values/attrs.xml
@@ -45,6 +45,7 @@
     <attr name="sleepCategoryIcon" format="reference"/>
     <attr name="vitalsCategoryIcon" format="reference"/>
     <attr name="wellnessCategoryIcon" format="reference"/>
+    <attr name="databaseIcon" format="reference" />
 
     <!-- Permission types page -->
     <attr name="appPriorityIcon" format="reference"/>
