--- a/apk/res/xml/all_data_screen.xml
+++ b/apk/res/xml/all_data_screen.xml
@@ -25,6 +25,12 @@
         android:key="key_permission_type"/>
     <com.android.healthconnect.controller.shared.preference.NoDataPreference
         app:isPreferenceVisible="false"/>
+    <com.android.settingslib.widget.ZeroStatePreference
+        android:key="zero_state_preference"
+        android:title="@string/no_data"
+        android:icon="?attr/databaseIcon"
+        android:summary="@string/all_data_no_data_footer"
+        app:isPreferenceVisible="false"/>
     <com.android.settingslib.widget.FooterPreference
         android:key="key_footer"
         android:title="@string/all_data_no_data_footer"
